Changed the icon again.  Added an Expand All [groups] option. Changed the package name.  Removed the menu for selecting which meal you want.